Revisions (dark mode colors, mobile breakpoint classes), Fixes: (:has pseudo selector change)
Fixes:
- Update has() selector (can no longer use a string value for element selection) in nav.js

New:
- Support for disabling dark mode. Add the data-disable-theme="true" attribute to the html element on any page where dark mode should be disabled.

- New classes support color changes in dark mode:
    - Text color:  .text-[color-name]-dm
    - Background color: .background-[color-name]-dm
    - Border color: .border-[color-name]-dm
    - Border color (specific side): .border-[side]-[color-name]-dm

- New classes support spacing, width and height changes for mobile breakpoint:
    - Margin (specific side): .m-[side]-[amount]-sm
    - Padding (specific side): .p-[side]-[amount]-sm
    - Margin: .m-[amount]-sm
    - Padding: .p-[amount]-sm
    - Width: .width-[amount]-sm
    - Height (in pixels): .height-[amount]-pixels-sm
    - Height (in viewport %): .height-[amount]-viewport-sm

--- a/_assets/scss/base/utility-colors.scss
+++ b/_assets/scss/base/utility-colors.scss
@@ -18,6 +18,12 @@ $colors: (
 		color: #{$color};
 	}
 
+	.text-#{$name}-dm {
+		@include darkmode(){
+			color: #{$color};
+		}
+	}
+
 	.background-#{$name} {
 		background-color: #{$color};
 		&.opacity-10 {
@@ -58,6 +64,12 @@ $colors: (
 		}
 	}
 
+	.background-#{$name}-dm {
+		@include darkmode(){
+			background-color: #{$color};
+		}
+	}
+
 	// Wordpress custom color support
 	.has-#{$name}-color {
 		color: #{$color};
@@ -72,10 +84,22 @@ $colors: (
 		border-color: #{$color};
 	}
 
+	.border-#{$name}-dm {
+		@include darkmode(){
+			border-color: #{$color};
+		}
+	}
+
 	$sides: (top, bottom, left, right); // Leave this variable alone
 	@each $side in $sides {
 		.border-#{str-slice($side, 0, 1)}-#{$name} {
 			border-#{$side}-color: #{$color} !important;
+		}
+
+		.border-#{str-slice($side, 0, 1)}-#{$name}-dm {
+			@include darkmode(){
+				border-#{$side}-color: #{$color} !important;
+			}
 		}
 	}
 
